removed blur and added trick to avoid flicker

--- a/static/src/scss/_reader.scss
+++ b/static/src/scss/_reader.scss
@@ -136,12 +136,12 @@ body.reader {
     }
   }
   .text-loading {
-    filter: blur(10px);
-    opacity: 0.2;
+    transform: translate3d(0, 0, 0);  // to avoid flicker
+    opacity: 0;
     transition-duration: 0.2s;
   }
   .text-loaded {
-    filter: none;
+    transform: translate3d(0, 0, 0);  // to avoid flicker
     opacity: 1;
     transition-duration: 0.2s;
   }
